--- a/aspfront/src/App.scss
+++ b/aspfront/src/App.scss
@@ -264,6 +264,38 @@ input[type=file]::file-selector-button {
     }
 }
 
+.loginBG {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    background-image: url(../public/images/bg.jpg);
+    filter: blur(2px);
+    margin: 0;
+    padding: 0;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+}
+
+.loginPage {
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    .block {
+        background-color: #FFFFFF;
+        padding: 40px;
+        width: 400px;
+        border-radius: 15px;
+        z-index: 2;
+        position: absolute;
+    }
+}
+
 
 .error{
     color: #a30404;
