--- a/aspfront/src/App.scss
+++ b/aspfront/src/App.scss
@@ -3,7 +3,7 @@
 // Variables
 
 
-
+$primary: #21232F;
 // Bootstrap
 $sidebar-font-color: #21232F;
 $sidebar-active-li: #21232F;
@@ -23,6 +23,14 @@ body{
 }
 
 
+.pageContent {
+    margin-left: 76px;
+}
+
+.btn-primary {
+    background-color: $primary !important;
+    border-color: $primary !important;
+}
 
 .iconMenu{
     display: flex;
@@ -47,108 +55,152 @@ body{
 }
 
 .main-menu {
-    background:#FFFFFF;
+    background: #FFFFFF;
     box-shadow: 0 0 5px #e1e1e2;
-    position:absolute;
-    top:0;
-    bottom:0;
-    height:100%;
-    left:0;
-    width:76px;
-    -webkit-transition:width .05s linear;
-    transition:width .05s linear;
-   
-    z-index:1000;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    height: 100%;
+    left: 0;
+    width: 76px;
+    -webkit-transition: width .05s linear;
+    transition: width .05s linear;
+
+    z-index: 1000;
     transition: 0.3s;
 
-    .logoBlock{
+    .logoBlock {
         width: 100%;
         margin: 15px 0;
         display: flex;
         justify-content: center;
     }
+
     .logout {
-        position:absolute;
-        left:0;
-        bottom:0;
+        position: absolute;
+        left: 0;
+        bottom: 0;
         padding: 15px;
-        li{
-            a{
-                &:hover{
+
+        .log {
+            a {
+                &:hover {
                     background-color: #a30404;
                 }
             }
         }
     }
-    ul{
+
+    .profile {
+        overflow: hidden;
+        transition: 0.4s;
+
+        .profileImg {
+            width: 46px;
+            height: 46px;
+            background-size: cover;
+            border-radius: 50%;
+            transition: 0.4s;
+        }
+
+        &:hover {
+            .profileImg {
+                width: 70px;
+                height: 70px;
+                border-radius: 0;
+            }
+            a {
+                transition: 0.4s;
+    
+                &:hover {
+                    background-color: $sidebar-active-li;
+                    height: 70px;
+                }
+            }
+
+        }
+        
+        a {
+            transition: 0.4s;
+        }
+        .email {
+            margin-left: 10px;
+        }
+    }
+
+    ul {
         padding: 0 15px;
         margin-top: 100px;
-            list-style: none;
-            
+        list-style: none;
 
-            li {
-                position:relative;
-                display:block;
-                margin: 5px 0;
-                z-index: 10;
-                
-                .activeMenu{
-                    background-color: $sidebar-active-li;
-                    transition: 0.4s;
-                    .fa{
-                        color: white;
-                    }
-                    .nav-text{
-                        color: white;
-                    }
+
+        li {
+            position: relative;
+            display: block;
+            margin: 5px 0;
+            z-index: 10;
+
+            .activeMenu {
+                background-color: $sidebar-active-li;
+                transition: 0.4s;
+
+                .fa {
+                    color: white;
                 }
-    
-                a {
-                    position:relative;
-                    display:flex;
-                
-                    align-items: center;
-                
-                    border-collapse:collapse;
-                    border-spacing:0;
-                    font-family: arial;
-                    font-size: 14px;
-                    text-decoration:none;
-                    transition: 0.4s;
-                    border-radius: 10px;
-                    overflow: hidden;
-                    height: 46px;
-                    width: 46px;
 
-                    &:hover{
-                        background-color: $sidebar-active-li;
-                        width: fit-content;
-                        .fa{
-                            color: white;
-                        }
-                        .nav-text{
-                            color: white;
-                        }
+                .nav-text {
+                    color: white;
+                }
+            }
+
+            a {
+                position: relative;
+                display: flex;
+
+                align-items: center;
+
+                border-collapse: collapse;
+                border-spacing: 0;
+                font-family: arial;
+                font-size: 14px;
+                text-decoration: none;
+                transition: 0.4s;
+                border-radius: 10px;
+                overflow: hidden;
+                height: 46px;
+                width: 46px;
+
+                &:hover {
+                    background-color: $sidebar-active-li;
+                    width: fit-content;
+
+                    .fa {
+                        color: white;
                     }
 
                     .nav-text {
-                        position:relative;
-                        display:block;
-                        font-family: 'Arial', sans-serif;
-                        color: $sidebar-font-color;
-                        font-size: 15px;
-                        font-weight: 500;
-                        white-space: nowrap;
-                        margin-right: 12px;
+                        color: white;
                     }
                 }
-                
+
+                .nav-text {
+                    position: relative;
+                    display: block;
+                    font-family: 'Arial', sans-serif;
+                    color: $sidebar-font-color;
+                    font-size: 15px;
+                    font-weight: 500;
+                    white-space: nowrap;
+                    margin-right: 12px;
+                }
             }
-        
-        
+
+        }
+
+
     }
-    
-    
+
+
 }
 
 input[type=file]::file-selector-button {
@@ -309,6 +361,12 @@ input[type='checkbox']{
     margin-right: 5px;
 }
 
+.deleteBtn{
+    border-radius: 20px 20px 0px 0px !important;
+    width: 120px;
+    height: 30px;
+    padding: 0 !important;
+}
 
 .loader-container {
     width: 100%;
