--- a/aspfront/src/App.scss
+++ b/aspfront/src/App.scss
@@ -32,6 +32,60 @@ body{
     border-color: $primary !important;
 }
 
+.imagePreview {
+    width: 150px;
+
+
+    height: auto;
+
+    display: flex;
+    flex-direction: row;
+    align-items: start;
+    justify-content: start;
+   
+    
+}
+.btn-primary {
+    min-width: 110px;
+
+    max-height: 45px;
+    display: block;
+    border-radius: 0px;
+    box-shadow: 0px 4px 6px 2px rgba(0, 0, 0, 0.2);
+    margin-top: -5px;
+}
+.imgUp {
+    margin-bottom: 15px;
+}
+
+.del {
+    position: absolute;
+    top: 0px;
+    right: 15px;
+    width: 30px;
+    height: 30px;
+    text-align: center;
+    line-height: 30px;
+    background-color: rgba(255, 255, 255, 0.6);
+    cursor: pointer;
+}
+.imgAdd {
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    background-color: #4bd7ef;
+    color: #fff;
+    box-shadow: 0px 0px 2px 1px rgba(0, 0, 0, 0.2);
+    text-align: center;
+    line-height: 30px;
+    margin-top: 0px;
+    cursor: pointer;
+    font-size: 15px;
+}
+.deletebutton{
+    height: 90px;
+    border-radius: 0 10px 10px 0 !important;
+}
 .iconMenu{
     display: flex;
     align-items: center;
